--- a/topics/glossary/g_computer_aided_translation.dita
+++ b/topics/glossary/g_computer_aided_translation.dita
@@ -5,7 +5,7 @@
     <glossdef>the use of software tools (such as translation memory tools and terminology managers)
         to assist a human translator in the translation process</glossdef>
     <glossBody>
-        <glossSurfaceForm>computer-assisted translation (CAT)</glossSurfaceForm>
+        <glossSurfaceForm>CAT (computer-assisted translation)</glossSurfaceForm>
         <glossAlt id="glossAlt_nlf_np5_kpb">
             <glossAcronym>CAT</glossAcronym>
         </glossAlt>
