--- a/topics/t_translating_repetitions.dita
+++ b/topics/t_translating_repetitions.dita
@@ -2,12 +2,12 @@
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA General Task//EN" "generalTask.dtd">
 <task id="t_working_with_views" xml:lang="en-US" dir="ltr">
     <title>Translating repetitions</title>
-    <shortdesc>Learn how to simplify your translation process in memoQ by creating a view containing
+    <shortdesc>Learn how to simplify your translation process in <term keyref="g_memoq"/> by creating a view containing
         only repetitions.</shortdesc>
     <taskbody>
-        <context>If your DITA project contains a lot of repetitive content, it may be useful to
-            include all repetitions in one view. In order to create a view containing all
-            repetitions, follow these steps:</context>
+        <context>If your <term keyref="g_dita"/> project contains a lot of repetitive content, it
+            may be useful to include all repetitions in one view. In order to create a view
+            containing all repetitions in <term keyref="g_memoq"/>, follow these steps:</context>
         <steps id="steps_tvl_tyr_jpb">
             <step>
                 <cmd>Go to <menucascade>
@@ -32,8 +32,7 @@
                     click <uicontrol>OK</uicontrol>.</cmd>
                 <info>
                     <fig id="fig_exj_jzr_jpb">
-                        <image href="../images/memoq-create-view-dialog.png"
-                            id="image_its_zhs_jpb">
+                        <image href="../images/memoq-create-view-dialog.png" id="image_its_zhs_jpb">
                             <alt>The 'Create view' dialog in memoQ</alt>
                         </image>
                     </fig>
