--- a/topics/c_glossaries.dita
+++ b/topics/c_glossaries.dita
@@ -11,7 +11,7 @@
                 term in various ways. Giving them a glossary of approved translations can increase
                 the consistency of terminology in one project or different projects concerning the
                 same product.</p>
-            <note id="note_owy_djl_kpb">Most CAT tools enable automatic terminology checks to ensure
+            <note id="note_owy_djl_kpb">Most <abbreviated-form keyref="g_computer_aided_translation"/> tools enable automatic terminology checks to ensure
                 a translator has used terms from the glossary. Although such checks are less useful
                 in languages in which the same word can have various grammatical forms .</note>
         </section>
@@ -33,11 +33,12 @@
         </section>
         <section id="section_nry_sjl_kpb">
             <title>Format</title>
-            <p>Glossaries (called term bases) can be developed directly in a CAT tool. Most CAT
+            <p>Glossaries (called term bases) can be developed directly in a <abbreviated-form keyref="g_computer_aided_translation"/> tool. Most <abbreviated-form keyref="g_computer_aided_translation"/>
                 tools have their own term base format, but you can use a universal format called
                 TermBase eXchange (TBX) to exchange term bases between different tools.</p>
-            <p>You can also prepare a glossary as a CSV file in a spreadsheet editor and then import
-                it into a CAT tool.</p>
+            <p>You can also prepare a glossary as a <abbreviated-form keyref="g_csv"/> file in a
+                spreadsheet editor and then import it into a <abbreviated-form
+                    keyref="g_computer_aided_translation"/> tool.</p>
             <fig id="fig_cjc_mml_kpb">
                 <title>A simple bilingual glossary developed in a spreadsheet editor</title>
                 <image href="../images/writing-glossary.png" id="image_urr_4pl_kpb">
