--- a/topics/glossary/g_svg.dita
+++ b/topics/glossary/g_svg.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE glossentry PUBLIC "-//OASIS//DTD DITA Glossary Entry//EN" "glossaryentry.dtd">
 <glossentry id="g_svg" xml:lang="en-US" dir="ltr">
     <glossterm>SVG</glossterm>
-    <glossdef>an XML-based vector graphics format</glossdef>
+    <glossdef>an <term keyref="g_xml"/>-based vector graphics format</glossdef>
     <glossBody>
         <glossSurfaceForm>SVG (Scalable Vector Graphics)</glossSurfaceForm>
         <glossAlt id="glossAlt_pkf_qs5_kpb">
