--- a/topics/c_localization_friendly_images.dita
+++ b/topics/c_localization_friendly_images.dita
@@ -9,7 +9,7 @@
             <p>If your images contain text that needs to be localized, avoid using bitmaps, such as
                 JPG or PNG files. Instead, use <abbreviated-form keyref="g_svg"/> files. Most
                     <abbreviated-form keyref="g_computer_aided_translation"/> tools can translate
-                text contained in <abbreviated-form keyref="g_svg"/> files.</p>
+                text contained in SVG files.</p>
         </section>
         <section id="section_fct_kkf_kpb">
             <title>Callouts</title>
