--- a/topics/glossary/g_computer_aided_translation.dita
+++ b/topics/glossary/g_computer_aided_translation.dita
@@ -6,7 +6,7 @@
         to assist a human translator in the translation process</glossdef>
     <glossBody>
         <glossSurfaceForm>CAT (computer-assisted translation)</glossSurfaceForm>
-        <glossAlt id="glossAlt_nlf_np5_kpb">
+        <glossAlt id="glossAlt_g_computer_aided_translation">
             <glossAcronym>CAT</glossAcronym>
         </glossAlt>
     </glossBody>
