--- a/topics/glossary/g_csv.dita
+++ b/topics/glossary/g_csv.dita
@@ -5,7 +5,7 @@
     <glossdef>a text file format that uses commas to separate values</glossdef>
     <glossBody>
         <glossSurfaceForm>CSV (Comma-Separated Values)</glossSurfaceForm>
-        <glossAlt id="glossAlt_agd_wq5_kpb">
+        <glossAlt id="glossAlt_g_csv">
             <glossAcronym>CSV</glossAcronym>
         </glossAlt>
     </glossBody>
