--- a/topics/glossary/g_dita.dita
+++ b/topics/glossary/g_dita.dita
@@ -6,7 +6,7 @@
         documentation</glossdef>
     <glossBody>
         <glossSurfaceForm>DITA (Darwin Information Typing Architecture)</glossSurfaceForm>
-        <glossAlt id="glossAlt_jqf_555_kpb">
+        <glossAlt id="glossAlt_g_dita">
             <glossAcronym>DITA</glossAcronym>
         </glossAlt>
     </glossBody>
