--- a/topics/glossary/g_oxygen_xml_editor.dita
+++ b/topics/glossary/g_oxygen_xml_editor.dita
@@ -5,7 +5,7 @@
     <glossdef>a popular XML editor offering advanced features for working with DITA
         projects</glossdef>
     <glossBody>
-        <glossAlt id="glossAlt_irv_vr5_kpb">
+        <glossAlt id="glossAlt_g_oxygen">
             <glossShortForm>oXygen</glossShortForm>
         </glossAlt>
     </glossBody>
