--- a/topics/c_glossaries.dita
+++ b/topics/c_glossaries.dita
@@ -33,12 +33,11 @@
         </section>
         <section id="section_nry_sjl_kpb">
             <title>Format</title>
-            <p>Glossaries (called term bases) can be developed directly in a <abbreviated-form keyref="g_computer_aided_translation"/> tool. Most <abbreviated-form keyref="g_computer_aided_translation"/>
+            <p>Glossaries (called term bases) can be developed directly in a CAT tool. Most CAT
                 tools have their own term base format, but you can use a universal format called
                 TermBase eXchange (TBX) to exchange term bases between different tools.</p>
             <p>You can also prepare a glossary as a <abbreviated-form keyref="g_csv"/> file in a
-                spreadsheet editor and then import it into a <abbreviated-form
-                    keyref="g_computer_aided_translation"/> tool.</p>
+                spreadsheet editor and then import it into a CAT tool.</p>
             <fig id="fig_cjc_mml_kpb">
                 <title>A simple bilingual glossary developed in a spreadsheet editor</title>
                 <image href="../images/writing-glossary.png" id="image_urr_4pl_kpb">
