--- a/topics/c_translation_friendly_text.dita
+++ b/topics/c_translation_friendly_text.dita
@@ -54,7 +54,7 @@
                 lead to translation errors and inconsistencies.</p>
             <p>Avoid using pagebreaks and empty lines to layout your document. The same content can
                 have a different volume in different languages.</p>
-            <note id="note_kv1_gbq_jpb" type="important">When localizing a <term keyref="g_dita"/> project, always send
+            <note id="note_kv1_gbq_jpb" type="important">When localizing a DITA project, always send
                 the translators your source files rather than the output (such as PDF or HTML
                 files).</note>
         </section>
