--- a/topics/t_importing_a_dita_project_into_memoq.dita
+++ b/topics/t_importing_a_dita_project_into_memoq.dita
@@ -2,12 +2,12 @@
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA General Task//EN" "generalTask.dtd">
 <task id="t_importing_a_dita_project_into_memoq" xml:lang="en-US" dir="ltr">
     <title>Importing a DITA project into memoQ</title>
-    <shortdesc>Learn how to import your <term keyref="g_dita"/> project into <term keyref="g_memoq"
+    <shortdesc>Learn how to import your DITA project into <term keyref="g_memoq"
         /> while preserving the project's folder structure.</shortdesc>
     <taskbody>
         <context>
-            <p>When translating a <term keyref="g_dita"/> project, it is important to preserve the relationships
-                between files. To import your project into <term keyref="g_memoq"/> without losing the project's folder
+            <p>When translating a DITA project, it is important to preserve the relationships
+                between files. To import your project into memoQ without losing the project's folder
                 strucure, follow these steps:</p>
         </context>
         <steps id="steps_tqk_mnr_jpb">
