--- a/topics/c_glossaries.dita
+++ b/topics/c_glossaries.dita
@@ -11,7 +11,7 @@
                 term in various ways. Giving them a glossary of approved translations can increase
                 the consistency of terminology in one project or different projects concerning the
                 same product.</p>
-            <note id="note_owy_djl_kpb">Most <abbreviated-form keyref="g_computer_aided_translation"/> tools enable automatic terminology checks to ensure
+            <note id="note_owy_djl_kpb">Most <term keyref="g_cat"/> tools enable automatic terminology checks to ensure
                 a translator has used terms from the glossary. Although such checks are less useful
                 in languages in which the same word can have various grammatical forms .</note>
         </section>
@@ -36,7 +36,7 @@
             <p>Glossaries (called term bases) can be developed directly in a CAT tool. Most CAT
                 tools have their own term base format, but you can use a universal format called
                 TermBase eXchange (TBX) to exchange term bases between different tools.</p>
-            <p>You can also prepare a glossary as a <abbreviated-form keyref="g_csv"/> file in a
+            <p>You can also prepare a glossary as a <term keyref="g_csv"/> file in a
                 spreadsheet editor and then import it into a CAT tool.</p>
             <fig id="fig_cjc_mml_kpb">
                 <title>A simple bilingual glossary developed in a spreadsheet editor</title>
