--- a/topics/c_translation_friendly_text.dita
+++ b/topics/c_translation_friendly_text.dita
@@ -49,7 +49,7 @@
         <section id="section_lnc_1kp_jpb">
             <title>Formating</title>
             <p>Search your text for unintended linebreaks and punctuation marks (such as periods in
-                place of commas). <abbreviated-form keyref="g_computer_aided_translation"/> tools
+                place of commas). <abbreviated-form keyref="g_cat"/> tools
                 may misinterpret such characters and split sentences into separate units. This can
                 lead to translation errors and inconsistencies.</p>
             <p>Avoid using pagebreaks and empty lines to layout your document. The same content can
