--- a/topics/glossary/g_xml.dita
+++ b/topics/glossary/g_xml.dita
@@ -2,12 +2,6 @@
 <!DOCTYPE glossentry PUBLIC "-//OASIS//DTD DITA Glossary Entry//EN" "glossaryentry.dtd">
 <glossentry id="g_xml" xml:lang="en-US" dir="ltr">
     <glossterm>XML</glossterm>
-    <glossdef>a markup language designed to store and transport data in a format that is both
-        human-readable and machine-readable</glossdef>
-    <glossBody>
-        <glossSurfaceForm>XML (eXtensible Markup Language)</glossSurfaceForm>
-        <glossAlt id="glossAlt_onx_m2v_kpb">
-            <glossAcronym>XML</glossAcronym>
-        </glossAlt>
-    </glossBody>
+    <glossdef>extensible markup language; a markup language designed to store and transport data in
+        a format that is both human-readable and machine-readable</glossdef>
 </glossentry>
