--- a/topics/glossary/g_memoq.dita
+++ b/topics/glossary/g_memoq.dita
@@ -2,6 +2,6 @@
 <!DOCTYPE glossentry PUBLIC "-//OASIS//DTD DITA Glossary Entry//EN" "glossaryentry.dtd">
 <glossentry id="g_memoq" xml:lang="en-US" dir="ltr">
     <glossterm>memoQ</glossterm>
-    <glossdef>a computer-assisted translation (CAT) software suite that runs on Microsoft Windows
-        operating systems</glossdef>
+    <glossdef>A popular computer-assisted translation (CAT) software suite that runs on Microsoft
+        Windows operating systems.</glossdef>
 </glossentry>
