--- a/topics/glossary/r_glossary.dita
+++ b/topics/glossary/r_glossary.dita
@@ -2,5 +2,5 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="r_glossary">
     <title>Glossary</title>
-    <shortdesc>Learn basic terms associated with localization of DITA projects.</shortdesc>
+    <shortdesc>Learn basic terms associated with the localization of DITA projects.</shortdesc>
 </reference>
