--- a/topics/c_content_reuse.dita
+++ b/topics/c_content_reuse.dita
@@ -2,14 +2,13 @@
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="c_content_reuse" xml:lang="en-US" dir="ltr">
     <title>Content reuse</title>
-    <shortdesc>Learn about best practices of reusing content with conrefs and keyrefs to avoid
-        problems with localization.</shortdesc>
+    <shortdesc>Learn about best practices for reusing content that will help you avoid problems with
+        localization.</shortdesc>
     <conbody>
-        <p/>
         <section id="section_r4h_l5d_jpb">
             <title>Handling conrefs</title>
-            <p>DITA lets you easily reuse content using the
-                    <codeph>conref</codeph> attribute.<fig id="fig_yzb_h4t_kpb">
+            <p>You can easily reuse content in DITA with the <codeph>conref</codeph> attribute.<fig
+                    id="fig_yzb_h4t_kpb">
                     <title>Example of content referencing in DITA</title>
                     <image href="../images/oxygen-conrefs.svg" id="image_l3z_jrt_kpb">
                         <alt>Example of using the conref attribute to reuse content between
@@ -23,24 +22,25 @@
                 these rules:<ul id="ul_ps1_w5t_kpb">
                     <li>Don't use conrefs for incomplete phrases. Instead, use them to reference
                         whole sentences or larger fragments.</li>
-                    <li>Avoid excessive content reuse. This may make it harder for translators to
+                    <li>Avoid excessive content reuse. This can make it harder for translators to
                         know the context of translated text.</li>
                 </ul></p>
         </section>
         <section id="section_qfv_l5d_jpb">
             <title>Handling keyrefs</title>
-            <p>Keyrefs can be used for standard text or expressions that can change, such as product
-                    names.<fig id="fig_jdn_fyt_kpb">
+            <p>You can reference keywords using the <codeph>keyref</codeph> attribute. Keyrefs can
+                be used for standard text or expressions that can change, such as product names.<fig
+                    id="fig_jdn_fyt_kpb">
                     <title>Example of keyword referencing in DITA</title>
                     <image href="../images/oxygen-keyrefs.svg" id="image_fct_5b5_kpb"/>
                     <image>
                         <alt>Example of using keydef and keyword elements in DITA</alt>
                     </image>
                 </fig></p>
-            <p>When used improperly, keyrefs can lead to translation errors. You can avoid them by
-                following these tips:<ul id="ul_w43_qvt_kpb">
-                    <li>Use keyrefs for non-declinable terms, such as product names or UI
-                        terms.</li>
+            <p>When used improperly, keyrefs can lead to translation errors. You can avoid such
+                errors by following these tips:<ul id="ul_w43_qvt_kpb">
+                    <li>Use keyrefs for terms that do not change their grammatical form, such as
+                        product names or UI terms.</li>
                     <li>Avoid using keyrefs for common nouns.</li>
                     <li>Treat keyrefs as proper nouns and don't precede them with articles.</li>
                 </ul></p>
