--- a/topics/c_localization_friendly_images.dita
+++ b/topics/c_localization_friendly_images.dita
@@ -2,22 +2,21 @@
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="c_localization_friendly_images" xml:lang="en-US" dir="ltr">
     <title>Localization-friendly images</title>
-    <shortdesc>Learn a few tips to make images in your project easier to localize.</shortdesc>
+    <shortdesc>Learn a few tips to make your images easier to localize.</shortdesc>
     <conbody>
         <section id="section_rqh_kkf_kpb">
             <title>Image format</title>
-            <p>If your images contain text that needs to be localized, avoid using bitmaps, such as
-                JPG or PNG files. Instead, use <term keyref="g_svg"/> files. Most
-                    <term keyref="g_cat"/> tools can translate
-                text contained in SVG files.</p>
+            <p>If your images contain text that you won't to translate, avoid using bitmaps, such as
+                JPG or PNG files. Instead, use <term keyref="g_svg"/> files. Most <term
+                    keyref="g_cat"/> tools can translate text contained in SVG files.</p>
         </section>
         <section id="section_fct_kkf_kpb">
             <title>Callouts</title>
             <p>To simplify the localization process, avoid using descriptions within images.
-                Instead, use numbered callouts and explain them under the image.SS</p>
+                Instead, use numbered callouts and explain them under the image.</p>
             <fig id="fig_fbl_rlf_kpb">
                 <image href="../images/writing-callouts.png" id="image_kld_slf_kpb" width="650">
-                    <alt>A 'fig' DITA element containing an image with two callouts that are
+                    <alt>A DITA &lt;fig> element containing an image with two callouts that are
                         explained in a numbered list below the image</alt>
                 </image>
             </fig>
@@ -25,8 +24,8 @@
         <section id="section_lbr_lkf_kpb">
             <title>UI screens</title>
             <p>If your documentation contains user interface (UI) screens, it is important to
-                consider whether the UI is going to be localized. You may need to plan for
-                additional steps to prepare UI screens in target languages.</p>
+                consider whether the UI is localized. You may need to plan additional steps to
+                prepare UI screens in target languages.</p>
         </section>
     </conbody>
 </concept>
