--- a/topics/c_project_structure.dita
+++ b/topics/c_project_structure.dita
@@ -2,14 +2,15 @@
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="c_project_structure" xml:lang="en-US" dir="ltr">
     <title>Project structure</title>
-    <shortdesc>Learn how to organize your project to make localization easier.</shortdesc>
+    <shortdesc>Learn how the structure your project can make localization easier.</shortdesc>
     <conbody>
         <section id="section_lhh_cpn_kpb">
             <title>Folder structure</title>
-            <p>A logical folder structure will make localization easier. Do not keep all your files
+            <p>A logical folder structure will make localization much easier. Do not keep all files
                 in one folder. Instead, create separate folders for your topics, images, and other
                     content.<note id="note_djz_ypn_kpb" type="tip">To avoid publishing problems,
-                        always store your DITA maps at a level above your topics and images.</note></p>
+                    always store your DITA maps at the same level or above your topics and
+                    images.</note></p>
         </section>
         <section id="section_tby_z4n_kpb">
             <title>Prefixes vs. folders</title>
@@ -22,12 +23,13 @@
                     <li><b>g_wand_shaft.dita</b></li>
                 </ul></p>
             <p>For larger projects, it may be useful to create separate folders for topics of each
-                type (that is concepts, tasks, references, and glossary entries). This will make
-                managing the project easier.</p>
+                type. This will make managing the project easier.</p>
             <fig id="fig_czj_dtn_kpb">
+                <title>Example structure of a project with separate folders for different types of
+                    content</title>
                 <image href="../images/oxygen-basic-structure.svg" id="image_vnf_3zn_kpb">
                     <alt>A flow chart depicting basic project structure with separe folders for
-                        images and each type of topics</alt>
+                        images and different types of topics</alt>
                 </image>
             </fig>
         </section>
@@ -36,6 +38,8 @@
             <p>To make the localization process easier, create a separate subfolder for each
                 language version. Each subfolder should have the same structure.</p>
             <fig id="fig_ptv_j5n_kpb">
+                <title>Example structure of a multilingual project with separate folders for
+                    different language versions</title>
                 <image href="../images/oxygen-language-folders.svg" id="image_vpr_jzn_kpb">
                     <alt>A flow chart depicting project structure divided into separe folders for
                         different language versions</alt>
@@ -48,6 +52,8 @@
                 They don't need to be translated. It's a good idea to keep files you don't want to
                 translate in a separate folder.</p>
             <fig id="fig_dlr_dtn_kpb">
+                <title>Example structure of a multilingual project with a separate folder for files
+                    you don't want to translate</title>
                 <image href="../images/oxygen-common-folder.svg" id="image_k2n_kzn_kpb">
                     <alt>A flow chart depicting project structure divided into separe folders for
                         different language versions and a common folder for untranslated files</alt>
